# goit-pythonweb-hw-12

./: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/workflows/: docs.yml
app/: auth.py  config.py  db.py  limiter.py  main.py  models.py  schemas.py
app/repositories/: contacts.py  users.py
app/routers/: auth.py  contacts.py  users.py
docs/: api.rst  conf.py  index.rst
migrations/: env.py
migrations/versions/: 0001_create_contacts.py  0002_users_and_contact_owner.py  0003_user_roles.py
tests/: conftest.py
tests/integration/: conftest.py  test_endpoints.py
tests/repositories/: test_contacts.py  test_users.py
