[project]
name = "goit-pythonweb-hw-12"
version = "0.2.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi[standard] (>=0.116.2,<0.117.0)",
    "sqlalchemy[asyncio] (>=2.0.43,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "python-jose[cryptography] (>=3.3.0,<4.0.0)",
    "python-multipart (>=0.0.12,<0.1.0)",
    "cloudinary (>=1.41.0,<2.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "fastapi-mail (>=1.4.1,<2.0.0)",
    "pydantic-settings (>=2.6.1,<3.0.0)",
    "slowapi (>=0.1.9,<0.2.0)",
    "redis (>=5.0.0,<6.0.0)",
    "fastapi-cache2 (>=0.2.2,<0.3.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "app" }]

[tool.poetry.group.dev.dependencies]
sphinx = "^8.2.3"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-dotenv = "^0.5.2"
pytest-mock = "^3.14.0"
aiosqlite = "^0.20.0"
testcontainers = "^4.8.2"
pdbpp = "^0.11.7"
faker = "^26.0.0"
pytest-cov = "^7.0.0"

